--- a/.env
+++ b/.env
@@ -16,7 +16,7 @@ MAIN_VITE_SERVER_PORT = 11451
 RENDERER_VITE_SERVER_URL = ""
 
 # 程序信息
-RENDERER_VITE_SITE_TITLE = "SPlayer"
+RENDERER_VITE_SITE_TITLE = ""
 RENDERER_VITE_SITE_ANTHOR = "無名"
 RENDERER_VITE_SITE_KEYWORDS = "SPlayer,云音乐,播放器,在线音乐,在线播放器,音乐播放器"
 RENDERER_VITE_SITE_DES = "一个简约的在线音乐播放器，具有音乐搜索、播放、每日推荐、私人FM、歌词显示、歌曲评论、网易云登录与云盘等功能"
